--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "tsc": "tsc",
     "versionize": "versionize",
     "prebuild": "scripts/check-engines.js",
-    "build": "yarn build:es && yarn build:typescript-types",
+    "build": "yarn build:es && yarn build:typescript-types && yarn build:alias",
     "build:es": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories,test --extensions '.js','.ts','.tsx'",
     "build:typescript-types": "tsc --noEmit false --emitDeclarationOnly",
+    "build:alias": "./alias.sh",
     "watch": "yarn build --watch",
     "snyk": "snyk test --dev --severity-threshold=medium",
     "tokens": "node ./style-dictionary/config.ts",
@@ -55,6 +56,7 @@
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-syntax-typescript": "^7.17.12",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.12.11",
