--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "lodash": "^4.17.14",
     "lodash-es": "^4.17.14",
     "set-value": "^2.0.1",
-    "mixin-deep": "^2.0.1",
-    "@types/react": "^17.0.17"
+    "mixin-deep": "^2.0.1"
   },
   "greenkeeper": {
     "lockfiles": {
@@ -68,17 +67,6 @@
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/client-api": "^6.5.9",
     "@storybook/react": "^6.5.9",
-    "@types/lodash": "^4.14.168",
-    "@types/react": "^17.0.17",
-    "@types/react-autosuggest": "^10.1.3",
-    "@types/react-dom": "^17.0.17",
-    "@types/react-onclickoutside": "^6.7.3",
-    "@types/react-portal": "^4.0.2",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/redux-form": "^7.0.4",
-    "@types/styled-components": "5.1.25",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.1.1",
@@ -120,6 +108,17 @@
     "style-dictionary": "3.0.3"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.168",
+    "@types/react": "^17.0.17",
+    "@types/react-autosuggest": "^10.1.3",
+    "@types/react-dom": "^17.0.17",
+    "@types/react-onclickoutside": "^6.7.3",
+    "@types/react-portal": "^4.0.2",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/redux-form": "^7.0.4",
+    "@types/styled-components": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "@babel/runtime": "^7.4.5",
     "@popperjs/core": "^2.9.2",
     "@types/classnames": "^2.2.11",
