--- a/style-dictionary/tokens/base/color.json5
+++ b/style-dictionary/tokens/base/color.json5
@@ -36,13 +36,13 @@
             },
             "accent":{
                 "normal": {
-                    "value":"rgba(250, 98, 88, 1)"
+                    "value":"rgba(15, 153, 245, 1)"
                 },
                 "hover": {
-                    "value":"rgba(215, 64, 67, 1)"
+                    "value":"rgba(0, 138, 230, 1)"
                 },
                 "active": {
-                    "value":"rgba(179, 44, 58, 1)"
+                    "value":"rgba(0, 122, 204, 1)"
                 },
                 "disable":{
                     "value":"rgba(238, 239, 242, 1)"
@@ -50,13 +50,13 @@
             },
             "help": {
                 "normal":{
-                    "value": "rgba(141, 95, 255, 1)"
+                    "value": "rgba(255, 144, 0, 1)"
                 },
                 "hover":{
-                    "value": "rgba(108, 69, 219, 1)"
+                    "value": "rgba(255, 125, 3, 1)"
                 },
                 "active":{
-                    "value": "rgba(78, 47, 183, 1)"
+                    "value": "rgba(252, 97, 0, 1)"
                 },
                 "disable":{
                     "value":"rgba(238, 239, 242, 1)"
@@ -79,17 +79,23 @@
             "statusDefault": {
                 "normal":{
                     "value":"rgba(245, 245, 247, 1)"
-                }
-            },
-            "statusPrimary": {
-                "normal":{
-                    "value":"rgba(255, 239, 238, 1)"
                 },
                 "hover":{
                     "value":"rgba(232, 232, 237, 1)"
                 },
                 "active":{
                     "value":"rgba(227, 227, 232, 1)"
+                }
+            },
+            "statusPrimary": {
+                "normal":{
+                    "value":"rgba(235, 243, 255, 1)"
+                },
+                "hover":{
+                    "value":"rgba(214, 231, 255, 1)"
+                },
+                "active":{
+                    "value":"rgba(204, 224, 255, 1)"
                 }
             },
             "statusInfo": {
@@ -127,13 +133,13 @@
             },
             "statusHelp": {
                 "normal":{
-                    "value": "rgba(242, 235, 255, 1)"
+                    "value":"rgba(235, 243, 255, 1)"
                 },
                 "hover":{
-                    "value":"rgba(228, 214, 255, 1)"
+                    "value":"rgba(214, 231, 255, 1)"
                 },
                 "active":{
-                    "value":"rgba(222, 204, 255, 1)"
+                    "value":"rgba(204, 224, 255, 1)"
                 }
             },
             "statusSuccess": {
@@ -149,8 +155,18 @@
             },
             "bonusDefault": {
                 "normal":{
-                    "value": "rgba(250, 98, 87, 1)"
+                    "value": "rgba(15, 153, 245, 1)"
+                },
+                "hover":{
+                    "value":"rgba(0, 138, 230, 1)"
+                },
+                "active":{
+                    "value":"rgba(0, 122, 204, 1)"
+                },
+                "disable":{
+                    "value":"rgba(238, 239, 242, 1)"
                 }
+
             },
             "bonusGold": {
                 "normal":{
@@ -213,8 +229,18 @@
             },
             "accent": {
                 "default": {
-                    "value": "rgba(250, 98, 88, 1)"
+                    "value": "rgba(15, 153, 245, 1)"
+                },
+                "hover": {
+                    "value": "rgba(0, 138, 230, 1)"
+                },
+                "active": {
+                    "value": "rgba(0, 122, 204, 1)"
+                },
+                "disable": {
+                    "value": "rgba(160, 162, 171, 1)"
                 }
+
             },
             "success": {
                 "default": {
@@ -226,14 +252,25 @@
                     "value": "rgba(0, 65, 163, 1)"
                 }
             },
+            "link": {
+                "normal": {
+                    "value": "rgba(0, 65, 163, 1)"
+                },
+                "hover": {
+                    "value": "rgba(0, 138, 230, 1)"
+                },
+                "active": {
+                    "value": "rgba(0, 122, 204, 1)"
+                }
+            },
             "warning": {
                 "default": {
-                    "value": "rgba(255, 139, 0, 1)"
+                    "value": "rgba(255, 144, 0, 1)"
                 }
             },
             "danger": {
                 "default": {
-                    "value": "rgba(222, 53, 11, 1)"
+                    "value": "rgba(230, 73, 38, 1)"
                 }
             },
             "staticWhite": {
@@ -252,20 +289,31 @@
                     "value": "rgba(232, 233, 237, 1)"
                 }
             },
+            "decorativeInverse":{
+                "default":{
+                    "value": "rgba(58, 58, 65, 1)"
+                }
+            },
             "primary":{
                 "normal":{
                     "value": "rgba(208, 209, 215, 1)"
                 },
                 "hover":{
-                    "value": "rgba(58, 58, 65, 1)"
+                    "value": "rgba(0, 138, 230, 1)"
                 },
                 "active":{
-                    "value": "rgba(16, 16, 20, 1)"
+                    "value": "rgba(0, 122, 204, 1)"
                 }
             },
             "accent":{
                 "normal":{
-                    "value": "rgba(250, 98, 88, 1)"
+                    "value": "rgba(15, 153, 245, 1)"
+                },
+                "hover":{
+                    "value": "rgba(0, 138, 230, 1)"
+                },
+                "active":{
+                    "value": "rgba(0, 122, 204, 1)"
                 }
             },
             "success":{
@@ -275,7 +323,7 @@
             },
             "danger":{
                 "normal":{
-                    "value": "rgba(222, 53, 11, 1)"
+                    "value": "rgba(230, 73, 38, 1)"
                 }
             },
             "transparent":{
