--- a/style-dictionary/tokens/components/button/buttonComposite.json5
+++ b/style-dictionary/tokens/components/button/buttonComposite.json5
@@ -959,13 +959,13 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.primary.normal.value}"
+                            "value": "{color.text.accent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.text.primary.hover.value}"
+                            "value": "{color.text.accent.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.primary.active.value}"
+                            "value": "{color.text.accent.active.value}"
                         },
                         "disable": {
                             "value": "{color.text.primary.disable.value}"
@@ -1021,13 +1021,13 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.primary.normal.value}"
+                            "value": "{color.text.accent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.text.primary.hover.value}"
+                            "value": "{color.text.accent.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.primary.active.value}"
+                            "value": "{color.text.accent.active.value}"
                         },
                         "disable": {
                             "value": "{color.text.primary.disable.value}"
@@ -1083,13 +1083,13 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.primary.normal.value}"
+                            "value": "{color.text.accent.default.value}"
                         },
                         "hover": {
-                            "value": "{color.text.primary.hover.value}"
+                            "value": "{color.text.accent.hover.value}"
                         },
                         "active": {
-                            "value": "{color.text.primary.active.value}"
+                            "value": "{color.text.accent.active.value}"
                         },
                         "disable": {
                             "value": "{color.text.primary.disable.value}"
