--- a/style-dictionary/tokens/base/colorDark.json5
+++ b/style-dictionary/tokens/base/colorDark.json5
@@ -3,35 +3,35 @@
         "bg": {
             "layout": {
                 "default":{
-                    "value": "rgba(250, 250, 251, 1)"
+                    "value": "rgba(16, 16, 20, 1)"
                 }
             },
             "primary":{
                 "normal": {
-                    "value":"rgba(255, 255, 255, 1)"
+                    "value":"rgba(33, 33, 38, 1)"
                 },
                 "hover": {
-                    "value":"rgba(246, 247, 248, 1)"
+                    "value":"rgba(46, 46, 51, 1)"
                 },
                 "active": {
-                    "value":"rgba(246, 247, 248, 1)"
+                    "value":"rgba(46, 46, 51, 1)"
                 },
                 "disable":{
-                    "value":"rgba(238, 239, 242, 1)"
+                    "value":"rgba(58, 58, 65, 1)"
                 }
             }, 
             "secondary": {
                 "normal":{
-                    "value": "rgba(238, 239, 242, 1)"
+                    "value": "rgba(58, 58, 65, 1)"
                 },
                 "hover":{
-                    "value": "rgba(232, 233, 237, 1)"
+                    "value": "rgba(70, 71, 78, 1)"
                 },
                 "active":{
-                    "value": "rgba(208, 209, 215, 1)"
+                    "value": "rgba(81, 82, 90, 1)"
                 },
                 "disable":{
-                    "value":"rgba(238, 239, 242, 1)"
+                    "value":"rgba(58, 58, 65, 1)"
                 }
             },
             "accent":{
@@ -45,7 +45,7 @@
                     "value":"rgba(0, 122, 204, 1)"
                 },
                 "disable":{
-                    "value":"rgba(238, 239, 242, 1)"
+                    "value":"rgba(58, 58, 65, 1)"
                 }
             },
             "help": {
@@ -64,92 +64,107 @@
             },
             "contrast": {
                 "normal":{
-                    "value": "rgba(33, 33, 38, 1)"
+                    "value": "rgba(250, 250, 251, 1)"
                 },
                 "hover":{
-                    "value": "rgba(58, 58, 65, 1)"
+                    "value": "rgba(245, 245, 247, 1)"
                 },
                 "active":{
-                    "value": "rgba(16, 16, 20, 1)"
+                    "value": "rgba(232, 233, 237, 1))"
                 },
                 "disable":{
-                    "value":"rgba(238, 239, 242, 1)"
+                    "value":"rgba(58, 58, 65, 1)"
                 }
             },
             "statusDefault": {
                 "normal":{
-                    "value":"rgba(245, 245, 247, 1)"
+                    "value":"rgba(46, 46, 51, 1)"
+                },
+                "hover":{
+                    "value":"rgba(46, 46, 51, 1)"
+                },
+                "active":{
+                    "value":"rgba(46, 46, 51, 1)"
                 }
             },
             "statusPrimary": {
                 "normal":{
-                    "value":"rgba(235, 243, 255, 1)"
+                    "value":"rgba(0, 27, 115, 1)"
                 },
                 "hover":{
-                    "value":"rgba(214, 231, 255, 1)"
+                    "value":"rgba(0, 24, 102, 1)"
                 },
                 "active":{
-                    "value":"rgba(204, 224, 255, 1)"
+                    "value":"rgba(0, 21, 92, 1)"
                 }
             },
             "statusInfo": {
                 "normal":{
-                    "value":"rgba(235, 243, 255, 1)"
+                    "value":"rgba(0, 27, 115, 1)"
                 },
                 "hover":{
-                    "value":"rgba(214, 231, 255, 1)"
+                    "value":"rgba(0, 24, 102, 1)"
                 },
                 "active":{
-                    "value":"rgba(204, 224, 255, 1)"
+                    "value":"rgba(0, 21, 92, 1)"
                 }
             },
             "statusDanger": {
                 "normal":{
-                    "value": "rgba(252, 237, 232, 1)"
+                    "value": "rgba(87, 10, 17, 1)"
                 },
                 "hover":{
-                    "value":"rgba(255, 221, 219, 1)"
+                    "value":"rgba(78, 9, 15, 1)"
                 },
                 "active":{
-                    "value":"rgba(255, 212, 209, 1)"
+                    "value":"rgba(69, 8, 14, 1)"
                 }
             },
             "statusWarning": {
                 "normal":{
-                    "value": "rgba(255, 246, 235, 1)"
+                    "value": "rgba(82, 50, 3, 1)"
                 },
                 "hover":{
-                    "value":"rgba(255, 236, 214, 1)"
+                    "value":"rgba(73, 45, 3, 1)"
                 },
                 "active":{
-                    "value":"rgba(255, 232, 204, 1)"
+                    "value":"rgba(64, 39, 3, 1)"
                 }
             },
             "statusHelp": {
                 "normal":{
-                    "value":"rgba(235, 243, 255, 1)"
+                    "value":"rgba(0, 27, 115, 1)"
                 },
                 "hover":{
-                    "value":"rgba(214, 231, 255, 1)"
+                    "value":"rgba(0, 24, 102, 1)"
                 },
                 "active":{
-                    "value":"rgba(204, 224, 255, 1)"
+                    "value":"rgba(0, 21, 92, 1)"
                 }
             },
             "statusSuccess": {
                 "normal":{
-                    "value": "rgba(244, 250, 219, 1)"
+                    "value": "rgba(48, 79, 2, 1)"
                 },
                 "hover":{
-                    "value":"rgba(239, 248, 201, 1)"
+                    "value":"rgba(42, 69, 2, 1)"
                 },
                 "active":{
-                    "value":"rgba(236, 246, 192, 1)"
+                    "value":"rgba(36, 59, 2, 1)"
                 }
             },
             "bonusDefault": {
                 "normal":{
-                    "value": "rgba(250, 98, 87, 1)"
+                    "value": "rgba(15, 153, 245, 1)"
+                },
+                "hover":{
+                    "value":"rgba(0, 138, 230, 1)"
+                },
+                "active":{
+                    "value":"rgba(0, 122, 204, 1)"
+                },
+                "disable":{
+                    "value":"rgba(238, 239, 242, 1)"
                 }
             },
             "bonusGold": {
@@ -164,7 +179,7 @@
             },
             "dark": {
                 "normal":{
-                    "value": "rgba(208, 209, 215, 1)",
+                    "value": "rgba(70, 71, 78, 1)",
                     "description": "Используется для серого фона компонентов, которым не хватает контраста с secondary"
                 }
             },
@@ -179,46 +194,40 @@
         "text": {
             "primary": {
                 "normal": {
-                    "value": "rgba(16, 16, 20, 1)"
+                    "value": "rgba(232, 233, 237, 1)"
+                },
+                "hover": {
+                    "value": "rgba(208, 209, 215, 1)"
+                },
+                "active": {
+                    "value": "rgba(208, 209, 215, 1)"
                 },
                 "disable": {
-                    "value": "rgba(160, 162, 171, 1)"
+                    "value": "rgba(81, 82, 90, 1)"
                 }
             },
             "secondary": {
-                "normal": {
-                    "value": "rgba(81, 82, 90, 1)"
-                },
-                "disable": {
-                    "value": "rgba(160, 162, 171, 1)"
+                "default": {
+                    "value": "rgba(208, 209, 215, 1)"
                 }
             },
             "description": {
-                "normal": {
-                    "value": "rgba(121, 122, 134, 1)"
-                },
-                "disable": {
-                    "value": "rgba(160, 162, 171, 1)"
+                "default": {
+                    "value": "rgba(181, 182, 192, 1))"
                 }
             },
             "placeholder": {
-                "normal": {
-                    "value": "rgba(160, 162, 171, 1)"
-                },
-                "disable": {
-                    "value": "rgba(160, 162, 171, 1)"
+                "default": {
+                    "value": "rgba(129, 130, 140, 1)"
                 }
             },
             "contrast": {
-                "normal": {
-                    "value": "rgba(255, 255, 255, 1)"
-                },
-                "disable": {
-                    "value": "rgba(255, 255, 255, 0.5)"
+                "default": {
+                    "value": "rgba(16, 16, 20, 1)"
                 }
             },
             "accent": {
-                "normal": {
+                "default": {
                     "value": "rgba(15, 153, 245, 1)"
                 },
                 "hover": {
@@ -228,7 +237,7 @@
                     "value": "rgba(0, 122, 204, 1)"
                 },
                 "disable": {
-                    "value": "rgba(160, 162, 171, 1)"
+                    "value": "rgba(81, 82, 90, 1)"
                 }
             },
             "success": {
@@ -268,30 +277,27 @@
                 },
                 "hover": {
                     "value": "rgba(255, 255, 255, 0.75)"
-                },
-                "disable": {
-                    "value": "rgba(160, 162, 171, 1)"
                 }
             }
             
         },
         "border":{
-            "decorativeLight":{
-                "default":{
-                    "value": "rgba(232, 233, 237, 1)"
-                }
-            },
-            "decorativeDark":{
+            "decorative":{
                 "default":{
                     "value": "rgba(58, 58, 65, 1)"
                 }
             },
+            "decorativeInverse":{
+                "default":{
+                    "value": "rgba(250, 250, 251, 1)"
+                }
+            },
             "primary":{
                 "normal":{
-                    "value": "rgba(208, 209, 215, 1)"
+                    "value": "rgba(81, 82, 90, 1)"
                 },
                 "hover":{
-                    "value": "rrgba(0, 138, 230, 1)"
+                    "value": "rgba(0, 138, 230, 1)"
                 },
                 "active":{
                     "value": "rgba(0, 122, 204, 1)"
