--- a/style-dictionary/tokens/base/font.json5
+++ b/style-dictionary/tokens/base/font.json5
@@ -3,17 +3,17 @@
         "family": {
             "regular": {
                 "default": {
-                    "value": "SuisseIntl-Regular"
+                    "value": "KB Source Sans Pro"
                 }
             },
             "medium": {
                 "default": {
-                    "value": "SuisseIntl-Medium"
+                    "value": "KB Source Sans Pro"
                 }
             },
             "bold": {
                 "default": {
-                    "value": "SuisseIntl-SemiBold"
+                    "value": "KB Source Sans Pro"
                 }
             }
         }
