--- a/style-dictionary/tokens/components/button/buttonIcon.json5
+++ b/style-dictionary/tokens/components/button/buttonIcon.json5
@@ -28,7 +28,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.staticWhite.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -89,7 +89,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.staticWhite.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -150,7 +150,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.staticWhite.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -574,16 +574,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.contrast.normal.value}"
+                            "value": "{color.text.contrast.default.value}"
                         },
                         "hover": {
-                            "value": "{color.text.contrast.normal.value}"
+                            "value": "{color.text.contrast.default.value}"
                         },
                         "active": {
-                            "value": "{color.text.contrast.normal.value}"
+                            "value": "{color.text.contrast.default.value}"
                         },
                         "disable": {
-                            "value": "{color.text.contrast.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -635,16 +635,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.contrast.normal.value}"
+                            "value": "{color.text.contrast.default.value}"
                         },
                         "hover": {
-                            "value": "{color.text.contrast.normal.value}"
+                            "value": "{color.text.contrast.default.value}"
                         },
                         "active": {
-                            "value": "{color.text.contrast.normal.value}"
+                            "value": "{color.text.contrast.default.value}"
                         },
                         "disable": {
-                            "value": "{color.text.contrast.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -696,16 +696,16 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.contrast.normal.value}"
+                            "value": "{color.text.contrast.default.value}"
                         },
                         "hover": {
-                            "value": "{color.text.contrast.normal.value}"
+                            "value": "{color.text.contrast.default.value}"
                         },
                         "active": {
-                            "value": "{color.text.contrast.normal.value}"
+                            "value": "{color.text.contrast.default.value}"
                         },
                         "disable": {
-                            "value": "{color.text.contrast.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -768,7 +768,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.staticWhite.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -829,7 +829,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.staticWhite.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -890,7 +890,7 @@
                             "value": "{color.text.staticWhite.normal.value}"
                         },
                         "disable": {
-                            "value": "{color.text.staticWhite.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -944,7 +944,7 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.accent.normal.value}"
+                            "value": "{color.text.accent.default.value}"
                         },
                         "hover": {
                             "value": "{color.text.accent.hover.value}"
@@ -953,7 +953,7 @@
                             "value": "{color.text.accent.active.value}"
                         },
                         "disable": {
-                            "value": "{color.text.accent.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -1005,7 +1005,7 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.accent.normal.value}"
+                            "value": "{color.text.accent.default.value}"
                         },
                         "hover": {
                             "value": "{color.text.accent.hover.value}"
@@ -1014,7 +1014,7 @@
                             "value": "{color.text.accent.active.value}"
                         },
                         "disable": {
-                            "value": "{color.text.accent.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
@@ -1066,7 +1066,7 @@
                     },
                     "text": {
                         "normal": {
-                            "value": "{color.text.accent.normal.value}"
+                            "value": "{color.text.accent.default.value}"
                         },
                         "hover": {
                             "value": "{color.text.accent.hover.value}"
@@ -1075,7 +1075,7 @@
                             "value": "{color.text.accent.active.value}"
                         },
                         "disable": {
-                            "value": "{color.text.accent.disable.value}"
+                            "value": "{color.text.primary.disable.value}"
                         }
                     }
                 },
